2006-11-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* hildon-date-editor.c:
	* hildon-date-editor.h:
	* hildon-time-editor.h: Switching to a common DateTime editor error
	type.

2006-11-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-time-editor.c:
	* src/hildon-time-editor.h: Switching to a common DateTime editor
	error type.

2006-11-16  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-calendar-popup.h:
	* src/hildon-caption.c:
	* src/hildon-caption.h:
	* src/hildon-date-editor.h:
	* src/hildon-font-selection-dialog.c:
	* src/hildon-font-selection-dialog.h:
	* src/hildon-get-password-dialog.c:
	* src/hildon-get-password-dialog.h:
	* src/hildon-note.c:
	* src/hildon-note.h:
	* src/hildon-program.h:
	* src/hildon-range-editor.h:
	* src/hildon-time-editor.c:
	* src/hildon-time-editor.h:
	* src/hildon-volumebar-range.h:
	* src/hildon-weekday-picker.h:
	* src/hildon-wizard-dialog.h: Removing deprecated functions.

2006-11-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/hildon-caption.c:
	* src/hildon-caption.h:
	* src/hildon-note.c:
	* src/hildon-note.h:
	* src/hildon-window.h: Register all the unregistered enums as GEnums
	to make it easier for the language bindings.

2006-11-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* src/Makefile.am:
	* src/hildon-marshalers.c:
	* src/hildon-marshalers.h: Fixing the marshalers rebuilding etc.

2006-11-15  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Making the source buildable again, fixing the mkenums thingy.

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com>

	* ./: Removing the whole lot of deprecated components.  

2006-11-14  Michael Dominic Kostrzewa  <michael.kostrzewa@nokia.com> 

	* ./: Some basic fixed to make the source actually buildable. Removing
	the marshallers from the build system for a little while. 
